--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Recipe Application",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html --dist-dir"
+    "build": "parcel build index.html --dist-dir ./dist"
   },
   "author": "Ashley Cove",
   "license": "ISC",
