--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "core-js": "^3.21.0",
-    "fractional": "^1.0.0",
+    "fraction.js": "^4.1.3",
     "regenerator-runtime": "^0.13.9"
   }
 }
